--- a/GGJ15.xcodeproj/xcshareddata/xcschemes/GGJ15 Mac.xcscheme
+++ b/GGJ15.xcodeproj/xcshareddata/xcschemes/GGJ15 Mac.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7A4035FE19DDEE84007B6E8F"
-               BuildableName = "GGJ15 Mac.app"
+               BuildableName = "WooshWoosh.app"
                BlueprintName = "GGJ15 Mac"
                ReferencedContainer = "container:GGJ15.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A4035FE19DDEE84007B6E8F"
-            BuildableName = "GGJ15 Mac.app"
+            BuildableName = "WooshWoosh.app"
             BlueprintName = "GGJ15 Mac"
             ReferencedContainer = "container:GGJ15.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A4035FE19DDEE84007B6E8F"
-            BuildableName = "GGJ15 Mac.app"
+            BuildableName = "WooshWoosh.app"
             BlueprintName = "GGJ15 Mac"
             ReferencedContainer = "container:GGJ15.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7A4035FE19DDEE84007B6E8F"
-            BuildableName = "GGJ15 Mac.app"
+            BuildableName = "WooshWoosh.app"
             BlueprintName = "GGJ15 Mac"
             ReferencedContainer = "container:GGJ15.xcodeproj">
          </BuildableReference>
